<resources>
    <string name="app_name">ProgramThree</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="toolbar_title">Toolbar</string>
    <string name="title">This is title</string>
    <string name="body">This is body</string>
    <string name="head">Personal Information</string>
    <string name="user_name">Profile Details</string>
    <string name="tier">Gold Tier</string>
    <string name="first_name">FIRST NAME</string>
    <string name="last_name">LAST NAME</string>
    <string name="birth_date">BIRTH DATE</string>
    <string name="mobile_no">MOBILE NUMBER</string>
    <string name="email_id">EMAIL ID</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
</resources>